crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_query_server.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter

from .handlers import Handlers
from .models import User


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/users")
    async def list_users(
        page: int = 1,
        limit: int = 20,
        search: str | None = None,
    ) -> list[User]:
        return await handlers.list_users(page=page, limit=limit, search=search)

    return router
