crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_req_header_client.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import User


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def create_user(self, *, idempotency_key: str) -> User:
        headers: dict[str, str] = {}
        headers["Idempotency-Key"] = idempotency_key
        response = await self.client.post(f"{self.base_url}/api/users", headers=headers)
        response.raise_for_status()
        return User(**response.json())
