crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_req_header_handler.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import User


class Handlers(Protocol):
    async def create_user(self, *, idempotency_key: str) -> User: ...
