crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_req_header_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Header

from .handlers import Handlers
from .models import User


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.post("/api/users")
    async def create_user(
        idempotency_key: str = Header(alias="Idempotency-Key"),
    ) -> User:
        return await handlers.create_user(idempotency_key=idempotency_key)

    return router
