crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_resp_header_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import GetPostResult, Post


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def get_post(self, id: str) -> GetPostResult:
        response = await self.client.get(f"{self.base_url}/api/posts/{id}")
        response.raise_for_status()
        ratelimit_remaining_raw = response.headers.get("X-RateLimit-Remaining")
        ratelimit_remaining = int(ratelimit_remaining_raw or 0)
        return GetPostResult(
            body=Post(**response.json()), ratelimit_remaining=ratelimit_remaining
        )
