crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_resp_header_handler.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import GetPostResult, Post


class Handlers(Protocol):
    async def get_post(self, id: str) -> GetPostResult: ...
