crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_resp_header_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter, Response

from .handlers import Handlers
from .models import Post


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/posts/{id}")
    async def get_post(id: str, response: Response) -> Post:
        result = await handlers.get_post(id=id)
        response.headers["X-RateLimit-Remaining"] = str(result.ratelimit_remaining)
        return result.body

    return router
