crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_simple_enum.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from enum import Enum

from pydantic import BaseModel


class Role(str, Enum):
    ADMIN = "Admin"
    EDITOR = "Editor"
    VIEWER = "Viewer"
