crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_struct_field_alias_models.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel, ConfigDict, Field


class Profile(BaseModel):
    model_config = ConfigDict(populate_by_name=True)

    id: int
    avatar_url: str | None = Field(None, alias="avatarUrl", max_length=200)
    display_name: str = Field(..., alias="displayName")
