crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_struct_to_model.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel


# A registered user
class User(BaseModel):
    id: int
    name: str
    bio: str | None = None
